# ot_harjoitustyo

./: .coverage  .env  .env.test  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: Architecture.md  Manual.md  Requirements.md  Testing.md  Timetracking.md  Vaatimusmäärittely  Vaatimusmäärittely.md  arkkitehtuuri.md  tuntikirjapinto.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: clock.py  config.py  events.py  game_grid.py  gamestate.py  img_loader.py  index.py  loop.py
src/assets/: scores.db  shapefile_directions.json  test-scores.db
src/database/: database_actions.py  database_connections.py  database_init.py
src/sprite_operations/: actions.py  img_loader.py  json_loader.py  operations.py  piece_creator.py  piece_rotator.py
src/sprites/: background.py  backround.py  block.py  bottom.py  buttons.py  longblock.py  piece_L.py  piece_creator.py  piece_long.py  piece_rotator.py
src/tests/: actions_test.py  database_test.py  gamestate_test.py  loop_test.py  movement_test.py  piece_collision_test.py
src/ui/: draw_display.py  game_grid.py  loop.py
